--- a/erika.html
+++ b/erika.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Erika's profile</title>
+  <title>Organisation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Erika's profile</title>
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/bootstrap-grid.css">
+  <title>Hund sida</title>
+  <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/bootstrap.css">
+  <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/style.css">
 </head>
 <body>
     <header>
-        <!--Nav för att skapa en menu -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container">
-            <!-- to make an company name to emphasise it
-                    we can put a dog image or icon
-     <a class="navbar-brand" href="#">
-         <img src="/img/logo.svg" alt="Hunds logo" width="30" height="24" class="d-inline-block align-text-top">
-        Dogs
-    </a>
-                -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#SmallScreenNavigationBar" aria-controls="SmallScreenNavigationBar" aria-expanded="false"
               aria-label="Toggle navigation">
-              <!-- Den här span användes för när skärmen är mindre visas menun i mindre form med en toggle knappt-->
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="/Index.html" href="#"><img src="img/dog-face.ico" style="width: 20px;">
+                  <a class="nav-link" href="/HTML_CSS_projektarbete/Index.html" href="#"><img src="img/dog-face.ico" style="width: 20px;">
                     Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+                  <a class="nav-link" href="/HTML_CSS_projektarbete/ourdogs.html">Our dogs</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/aboutus.html">Who we are</a>
+                  <a class="nav-link" href="/HTML_CSS_projektarbete/aboutus.html">Who we are</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/blog.html">Blog</a>
+                  <a class="nav-link" href="/HTML_CSS_projektarbete/blog.html">Blog</a>
                   <li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/organisation.html">Organisation</a>
+                      <a class="nav-link" href="/HTML_CSS_projektarbete/organisation.html">Organisation</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
       </header>
-      <div class="container p-5 my-5 bg-dark text-white text-center">
-        <h1>Erika's profile</h1> 
+      <div class="tophead">
+        <h1>Erikas</h1>
+        <p><h3>Profil</h3></p> 
       </div>
+      <div class="carousel-container">
+        <i class="fas fa-arrow-left" id="prevBtn"></i>
+        <i class="fas fa-arrow-right" id="nextBtn"></i>
+
+    <div class="carousel-slide">
+      <img src="img/dog3.jpg" id="lastClone" alt="dog3">
+      <img src="img/dog1.jpg" alt="dog1">
+      <img src="img/dog2.jpg" alt="dog2">
+      <img src="img/dog3.jpg" alt="dog3">
+      <img src="img/dog1.jpg" id="firstClone" alt="dog1">
+    </div>
+  </div>
+  
+
+<script src="https://kit.fontawesome.com/0b12803b73.js" crossorigin="anonymous"></script>
+<script src="/HTML_CSS_projektarbete/js/slideshow.js"></script>      
+<script src="/HTML_CSS_projektarbete/js/bootstrap.js"></script>
+ </body>
+</html>
