--- a/organisation.html
+++ b/organisation.html
@@ -4,32 +4,20 @@
   <title>Organisation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hund sida</title>
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/bootstrap.css">
+  <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/style.css">
 </head>
 <body>
-    <header>
-        <!--Nav för att skapa en menu -->
+    <header>        
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <!-- to make an company name to emphasise it
-                    we can put a dog image or icon
-     <a class="navbar-brand" href="#">
-         <img src="/img/logo.svg" alt="Hunds logo" width="30" height="24" class="d-inline-block align-text-top">
-        Dogs
-    </a>
-                -->
+          <div class="container">              
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#SmallScreenNavigationBar" aria-controls="SmallScreenNavigationBar" aria-expanded="false"
               aria-label="Toggle navigation">
-              <!-- Den här span användes för när skärmen är mindre visas menun i mindre form med en toggle knappt-->
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
@@ -56,36 +44,48 @@
           </div>
         </nav>
       </header>
-<div class="container p-5 my-5 bg-dark text-white text-center">
+<div class="tophead">
   <h1>Organisation</h1>
-  <p>Our coworkers</p> 
+  <p><h3>Our coworkers</h3></p> 
 </div>
-<div class="container mt-5">
+<div class="container mt-5 bg-light">
   <div class="row">
-    <div class="col-sm-4 bg-dark text-white">
-      <h3>Karl</h3>
-      <a href="/karl.html">
-      <img src="/img/kalle.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
+    <div class="container col-sm-4 border border-5 border-white">
+      <div class="text-center">
+      <h3 class="karl">Karl</h3>
+      <a href="/HTML_CSS_projektarbete/karl.html">
+      <img src="/HTML_CSS_projektarbete/img/kalle.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
+      </div>
+      <br>
       <p>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore est voluptates quasi ducimus totam qui modi consequuntur ex corporis velit.</p>
     </div>
-    <div class="col-sm-4 bg-dark text-white">
-      <h3>Erika</h3>
-      <a href="/erika.html">
-      <img src="/img/erica.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
+    <div class="container col-sm-4 border border-5 border-white">
+      <div class="text-center">
+      <h3 class="erika">Erika</h3>
+      <a href="/HTML_CSS_projektarbete/erika.html">
+      <img src="/HTML_CSS_projektarbete/img/erica.jpg" class="rounded" alt="Cinque Terre" width="300px" height="450px"></a>
+      </div>
+      <br>
       <p>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam vel molestias maiores ut quaerat ex eum praesentium, optio officiis non!</p>
     </div>
-    <div class="col-sm-4 bg-dark text-white">
-      <h3>Egon</h3>  
-      <a href="/egon.html">      
-      <img src="/img/egon.jpg" class="rounded" alt="Cinque Terre" width="350px" height="450px"></a>
+    <div class="container col-sm-4 border border-5 border-white">
+      <div class="text-center">
+      <h3 class="egon">Egon</h3>  
+      <a href="/HTML_CSS_projektarbete/egon.html">      
+      <img src="/HTML_CSS_projektarbete/img/egon.jpg" class="rounded" alt="Cinque Terre" width="350px" height="450px"></a>
+      </div>
+      <br>
       <p>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, odit. Quam consequatur aliquid officia amet quod asperiores facilis minima officiis?</p>
     </div>
   </div>
 </div>
-
-
+<script src="js/bootstrap.js"></script>
+<script src="/HTML_CSS_projektarbete/js/bootstrap.js"></script>
 </body>
 </html>
