--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
   <title>Hund Train Websida</title>
   <meta name="description" content="Here you can find best train place for your dog!" />
   <meta name="author" content="traindog.se" />
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/allstyle.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/allstyle.css">
   <!-- Ikoner till footer -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
@@ -33,16 +33,16 @@
                 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+              <a class="nav-link" href="ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutus.html">Who we are</a>
+              <a class="nav-link" href="aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog.html">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/organisation.html">Organisation</a>
+              <a class="nav-link" href="organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
@@ -56,18 +56,18 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/img/index-slider/dvargschnauzer-i-skogen.jpg" class="d-block w-100"
+              <img src="img/index-slider/dvargschnauzer-i-skogen.jpg" class="d-block w-100"
                 alt="dvargschnauzer i skogen">
             </div>
             <div class="carousel-item">
-              <img src="/img/index-slider/dvargschnauzer-kalle-och-erica-med-hundar.jpg" class="d-block w-100"
+              <img src="img/index-slider/dvargschnauzer-kalle-och-erica-med-hundar.jpg" class="d-block w-100"
                 alt="dvargschnauzer kalle och erica med hundar">
             </div>
             <div class="carousel-item">
-              <img src="/img/index-slider/dvargschnauzer-valpar.jpg" class="d-block w-100" alt="dvargschnauzer valpar">
+              <img src="img/index-slider/dvargschnauzer-valpar.jpg" class="d-block w-100" alt="dvargschnauzer valpar">
             </div>
             <div class="carousel-item">
-              <img src="/img/index-slider/dvärgschnauzer-alone-over-the-table.JPG" class="d-block w-100"
+              <img src="img/index-slider/dvärgschnauzer-alone-over-the-table.JPG" class="d-block w-100"
                 alt="dvärgschnauzer alone over the table">
             </div>
           </div>
@@ -91,37 +91,37 @@
           <div class="row row-cols-1 row-cols-md-3 g-3">
             <div class="col">
               <div class="card">
-                <img src="/img/kalle.jpg" class="img-thumbnail" alt="picture of Kalle with dog">
+                <img src="img/kalle.jpg" class="img-thumbnail" alt="picture of Kalle with dog">
                 <div class="card-body">
                   <h5 class="card-title">Kalle</h5>
                   <p class="card-text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, quidem.
                   </p>
-                  <a href="/organisation.html" class="btn btn-dark">More details</a>
+                  <a href="organisation.html" class="btn btn-dark">More details</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/erica.jpg" class="img-thumbnail " alt="picture of Erica with dog">
+                <img src="img/erica.jpg" class="img-thumbnail " alt="picture of Erica with dog">
                 <div class="card-body">
                   <h5 class="card-title">Erica</h5>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, eius.
                   </p>
-                  <a href="/organisation.html" class="btn btn-dark">More details</a>
+                  <a href="organisation.html" class="btn btn-dark">More details</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/egon.jpg" class="img-thumbnail " alt="picture of Egon with dog">
+                <img src="img/egon.jpg" class="img-thumbnail " alt="picture of Egon with dog">
                 <div class="card-body">
                   <h5 class="card-title">Egon</h5>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, fugit.
                   </p>
-                  <a href="/organisation.html" class="btn btn-dark">More details</a>
+                  <a href="organisation.html" class="btn btn-dark">More details</a>
                 </div>
               </div>
             </div>
@@ -146,7 +146,7 @@
                 Svenska Dvärgschnauzers ligger i Halmstad och har 70 anställda som sköter administrationen av
                 organisationen och ger stöd och råd till medlemmarna.
               </p>
-              <a href="/ourdogs.html" class="btn btn-dark">More details</a>
+              <a href="ourdogs.html" class="btn btn-dark">More details</a>
             </div>
           </div>
         </article>
@@ -237,7 +237,7 @@
             <h1 class="display-6">Do you want to learn more?</h1>
             <p class="lead">We are trying to improve ourself all the time. Train is our job and we are good on it!</p>
             <p>If you want to see more close or for more information check the link down belowe</p>
-            <a class="btn btn-dark btn-md" href="/aboutus.html" role="button">Go to contact</a>
+            <a class="btn btn-dark btn-md" href="aboutus.html" role="button">Go to contact</a>
           </div>
         </article>
       </section>
@@ -251,19 +251,19 @@
         <div class="col-md-6 text-center">
           <ul class="nav">
             <li class="nav-item">
-              <a href="/Index.html" class="nav-link text-dark">Home</a>
+              <a href="Index.html" class="nav-link text-dark">Home</a>
             </li>
             <li class="nav-item">
-              <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+              <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+              <a href="aboutus.html" class="nav-link text-dark">About us</a>
             </li>
             <li class="nav-item">
-              <a href="/blog.html" class="nav-link text-dark">Blog</a>
+              <a href="blog.html" class="nav-link text-dark">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+              <a href="organisation.html" class="nav-link text-dark">Organisation</a>
           </ul>
         </div>
         <div class="col-md-4 text-center text-md-start">
@@ -278,7 +278,7 @@
     </div>
   </footer>
   <!-- Footer -->
-  <script src="/js/bootstrap.js"></script>
+  <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
