--- a/erika.html
+++ b/erika.html
@@ -27,21 +27,21 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/Index.html"><img src="img/dog-face.ico"
+              <a class="nav-link" href="index.html"><img src="img/dog-face.ico"
                   style="width: 20px;">
                 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+              <a class="nav-link" href="ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutus.html">Who we are</a>
+              <a class="nav-link" href="aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog.html">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             <li>
             <li class="nav-item">
-              <a class="nav-link active" href="/organisation.html">Organisation</a>
+              <a class="nav-link active" href="organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
   </header>
   <div class="tophead">
     <div class="banner">
-      <img src="/img/hund.jpg" class="responsive" alt="banner">
+      <img src="img/hund.jpg" class="responsive" alt="banner">
     </div>
     <div class="centered">
       <h1>Erikas</h1>
@@ -94,7 +94,7 @@
             ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
         </div>
         <div>
-          <img src="/img/dog1.jpg" alt="hund1">
+          <img src="img/dog1.jpg" alt="hund1">
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
     <div class="containers">
       <div class="split">
         <div>
-          <img src="/img/dog2.jpg" alt="hund2">
+          <img src="img/dog2.jpg" alt="hund2">
         </div>
         <div>
           <h2>Vad jag gör</h2>
@@ -130,19 +130,19 @@
         <div class="col-md-6 text-center">
           <ul class="nav">
             <li class="nav-item">
-              <a href="/Index.html" class="nav-link text-dark">Home</a>
+              <a href="index.html" class="nav-link text-dark">Home</a>
             </li>
             <li class="nav-item">
-              <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+              <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+              <a href="aboutus.html" class="nav-link text-dark">About us</a>
             </li>
             <li class="nav-item">
-              <a href="/blog.html" class="nav-link text-dark">Blog</a>
+              <a href="blog.html" class="nav-link text-dark">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+              <a href="organisation.html" class="nav-link text-dark">Organisation</a>
           </ul>
         </div>
         <div class="col-md-4 text-center text-md-start">
@@ -157,8 +157,8 @@
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/0b12803b73.js" crossorigin="anonymous"></script>
-  <script src="/js/slideshow.js"></script>
-  <script src="/js/bootstrap.js"></script>
+  <script src="js/slideshow.js"></script>
+  <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
