--- a/kenzo.html
+++ b/kenzo.html
@@ -26,20 +26,20 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/Index.html"><img src="img/dog-face.ico" style="width: 20px;">
+              <a class="nav-link" href="index.html"><img src="img/dog-face.ico" style="width: 20px;">
                 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/ourdogs.html">Our dogs</a>
+              <a class="nav-link active" href="ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutus.html">Who we are</a>
+              <a class="nav-link" href="aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog.html">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/organisation.html">Organisation</a>
+              <a class="nav-link" href="organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
@@ -103,19 +103,19 @@
           <div class="col-md-6 text-center">
             <ul class="nav">
               <li class="nav-item">
-                <a href="/Index.html" class="nav-link text-dark">Home</a>
+                <a href="index.html" class="nav-link text-dark">Home</a>
               </li>
               <li class="nav-item">
-                <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+                <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
               </li>
               <li class="nav-item">
-                <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+                <a href="aboutus.html" class="nav-link text-dark">About us</a>
               </li>
               <li class="nav-item">
-                <a href="/blog.html" class="nav-link text-dark">Blog</a>
+                <a href="blog.html" class="nav-link text-dark">Blog</a>
               </li>
               <li class="nav-item">
-                <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+                <a href="organisation.html" class="nav-link text-dark">Organisation</a>
             </ul>
           </div>
           <div class="col-md-4 text-center text-md-start">
