--- a/organisation.html
+++ b/organisation.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Index.html" href="#">
+              <a class="nav-link" href="index.html">
                 <img src="img/dog-face.ico" style="width: 20px">
                 Home</a>
             </li>
