--- a/ourdogs.html
+++ b/ourdogs.html
@@ -26,20 +26,20 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/Index.html"><img src="img/dog-face.ico" style="width: 20px;">
+              <a class="nav-link" href="index.html"><img src="img/dog-face.ico" style="width: 20px;">
                 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/ourdogs.html">Our dogs</a>
+              <a class="nav-link active" aria-current="page" href="ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutus.html">Who we are</a>
+              <a class="nav-link" href="aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog.html">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/organisation.html">Organisation</a>
+              <a class="nav-link" href="organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row">
           <div class="col-sm-3 mt-4 img-border">
-            <a href="/aurora.html">
+            <a href="aurora.html">
              <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block" width="200" height="300">
             <div class="img-text text-center">
               <h3 class="mt-2 border-bottom">Aurora</h3>
@@ -64,7 +64,7 @@
             </div>
           </div>
          <div class="col-sm-3 mt-4 img-border">
-             <a href="/kenzo.html">
+             <a href="kenzo.html">
              <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block" width="200" height="300">
            <div class="img-text text-center">
             <h3 class="mt-2 border-bottom">Kenzo</h3>
@@ -73,7 +73,7 @@
            </div>
        </div>
        <div class="col-sm-3 mt-4 img-border">
-             <a href="/luna.html">
+             <a href="luna.html">
              <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block" width="200" height="300">
             <div class="img-text text-center">
                <h3 class="mt-2 border-bottom">Luna</h3>
@@ -89,19 +89,19 @@
           <div class="col-md-6 text-center">
             <ul class="nav">
               <li class="nav-item">
-                <a href="/Index.html" class="nav-link text-dark">Home</a>
+                <a href="index.html" class="nav-link text-dark">Home</a>
               </li>
               <li class="nav-item">
-                <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+                <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
               </li>
               <li class="nav-item">
-                <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+                <a href="aboutus.html" class="nav-link text-dark">About us</a>
               </li>
               <li class="nav-item">
-                <a href="/blog.html" class="nav-link text-dark">Blog</a>
+                <a href="blog.html" class="nav-link text-dark">Blog</a>
               </li>
               <li class="nav-item">
-                <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+                <a href="organisation.html" class="nav-link text-dark">Organisation</a>
             </ul>
           </div>
           <div class="col-md-4 text-center text-md-start">
